bk_ida/gccida/c1/cselib_record_sets
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_record_sets/src/cselib.c:1710:4: error: expected ';' after expression
rtx v12; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_record_sets/src/cselib.c:1710:5: error: use of undeclared identifier 'v12'
rtx v12; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_record_sets/src/cselib.c:1713:4: error: expected ';' after expression
rtx arg1; // [rsp+10h] [rbp-D78h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_record_sets/src/cselib.c:1713:5: error: use of undeclared identifier 'arg1'
rtx arg1; // [rsp+10h] [rbp-D78h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_record_sets/src/cselib.c:1714:4: error: expected ';' after expression
rtx arg2[430]; // [rsp+18h] [rbp-D70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_record_sets/src/cselib.c:1714:5: error: use of undeclared identifier 'arg2'
rtx arg2[430]; // [rsp+18h] [rbp-D70h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_record_sets/src/cselib.c:1716:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v1 = ( __int64)insn[2]; 
               ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_record_sets/src/cselib.c:1737:1: error: use of undeclared identifier 'arg2'
arg2[v8 - 1] = *( rtx *)( v7 + 16); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_record_sets/src/cselib.c:1737:24: error: expected expression
arg2[v8 - 1] = *( rtx *)( v7 + 16); 
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_record_sets/src/cselib.c:1738:1: error: use of undeclared identifier 'arg2'
arg2[v8] = *( rtx *)( v7 + 8); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_record_sets/src/cselib.c:1738:20: error: expected expression
arg2[v8] = *( rtx *)( v7 + 8); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_record_sets/src/cselib.c:1747:1: error: use of undeclared identifier 'arg1'
arg1 = *( rtx *)( v1 + 16); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_record_sets/src/cselib.c:1747:16: error: expected expression
arg1 = *( rtx *)( v1 + 16); 
               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_record_sets/src/cselib.c:1748:1: error: use of undeclared identifier 'arg2'
arg2[0] = *( rtx *)( v1 + 8); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_record_sets/src/cselib.c:1748:19: error: expected expression
arg2[0] = *( rtx *)( v1 + 8); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_record_sets/src/cselib.c:1760:7: error: use of undeclared identifier 'arg2'
rtx = arg2[v9]; 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_record_sets/src/cselib.c:1764:1: error: use of undeclared identifier 'arg2'
arg2[v9] = rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_record_sets/src/cselib.c:1768:1: error: use of undeclared identifier 'v12'
v12 = arg2[v9 - 1]; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_record_sets/src/cselib.c:1768:7: error: use of undeclared identifier 'arg2'
v12 = arg2[v9 - 1]; 
      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_record_sets/src/obj/cselib.o] Error 1
